fix: isBlank()로 수정